--- a/settings.json
+++ b/settings.json
@@ -7,29 +7,29 @@
 	"leavesay": "*BEBAN LEFT*",
 	"promotesay": "*cie naik pangkat*",
 	"demotesay": "*yahahaha turun yah*",
-	"supportme": "nekopoi.care", 
-	"fakereply": "YT SIEGRIN", 
-	"ownername": "SIEGRIN", 
-	"owner": "6289530298948", 
-	"owner2": "6289530298948", 
-	"ownername2": "SIEGRIN", 
-	"owner3": "6289530298948", 
-	"ownername3": "SIEGRIN", 
-	"developer": "6289530298948",  
-	"donasi": "0895602592430", 
-	"rekening": "0895602592430", 
-	"mybio": "https://wa.me/c/6289530298948",
-	"trakteer": "bit.ly/3m5hgof", 
-	"mygmail": "piubitt@gmail.com", 
-	"saweria": "bit.ly/3oVRGnx", 
-	"myyoutube":"bit.ly/3s2UaT6", 
-	"mytiktok":"bit.ly/3m5xwpi", 
-	"mytwitter":"bit.ly/3yHNY4x", 
-	"github": "bit.ly/3scVRNU",
-	"linkgc1": "https://chat.whatsapp.com/ItWuInyvxDs1mDHUVV5xM8", 
-	"linkgc2": "https://chat.whatsapp.com/CBGSIU5bKPi8NFPG532ZUE", 
-	"linkgc3": "https://chat.whatsapp.com/CXPjrQPrn6mCU8EOnhvoSG", 
-	"linkgc4": "https://chat.whatsapp.com/KrAUJEWIjZDGYuyu1qTk9V", 
-	"linkgc5": "https://chat.whatsapp.com/KMfRqDxbv729Hn9qBZL1wQ"
+	"supportme": "luwibu.cok", 
+	"fakereply": "WIBU LU", 
+	"ownername": "UnKnOwN", 
+	"owner": "6281232444391", 
+	"owner2": "6281232444391", 
+	"ownername2": "UnKnOwN", 
+	"owner3": "6281232444391", 
+	"ownername3": "UnKnOwN", 
+	"developer": "6281232444391",  
+	"donasi": "0", 
+	"rekening": "0", 
+	"mybio": "https://wa.me/c/6281232444391",
+	"trakteer": "0", 
+	"mygmail": "ajimiko440@gmail.com", 
+	"saweria": "0", 
+	"myyoutube":"0", 
+	"mytiktok":"0", 
+	"mytwitter":"0", 
+	"github": "0",
+	"linkgc1": "https://chat.whatsapp.com/", 
+	"linkgc2": "https://chat.whatsapp.com/",
+	"linkgc3": "https://chat.whatsapp.com/", 
+	"linkgc4": "https://chat.whatsapp.com/",
+	"linkgc5": "https://chat.whatsapp.com/"
 }
 
